website/versioned_docs/version-2.4.1/node-client.md
---
id: version-2.4.1-node-client
title: node-client package
hide_title: true
original_id: node-client
---
<!-- Do not edit this file. It is automatically generated by API Documenter. -->


## node-client package

## Classes

|  Class | Description |
|  --- | --- |
|  [AuthContainer](./node-client.authcontainer.md) | Skygear Auth APIs. |
|  [BaseAPIClient](./node-client.baseapiclient.md) |  |
|  [CancelError](./node-client.cancelerror.md) | CancelError is an error to represent cancel. |
|  [Container](./node-client.container.md) | Skygear APIs container. |
|  [GlobalJSONContainerStorage](./node-client.globaljsoncontainerstorage.md) |  |
|  [ImageProcessingPipelineBuilder](./node-client.imageprocessingpipelinebuilder.md) | Image processing pipeline builder. |
|  [MemoryStorageDriver](./node-client.memorystoragedriver.md) |  |
|  [NodeAPIClient](./node-client.nodeapiclient.md) |  |
|  [NodeAssetContainer](./node-client.nodeassetcontainer.md) | Skygear Asset APIs (for Node.js). |
|  [NodeContainer](./node-client.nodecontainer.md) | Skygear APIs container (for Node.js). |
|  [OIDCContainer](./node-client.oidccontainer.md) | Skygear Auth OIDC client APIs. |
|  [SkygearError](./node-client.skygearerror.md) | Skygear API error. |

## Functions

|  Function | Description |
|  --- | --- |
|  [decodeAuthResponse(r)](./node-client.decodeauthresponse.md) |  |
|  [decodeError(err)](./node-client.decodeerror.md) |  |
|  [decodeIdentity(i)](./node-client.decodeidentity.md) |  |
|  [decodeSession(s)](./node-client.decodesession.md) |  |
|  [decodeUser(u)](./node-client.decodeuser.md) |  |
|  [encodeIdentity(i)](./node-client.encodeidentity.md) |  |
|  [encodeUser(u)](./node-client.encodeuser.md) |  |
|  [getDeviceName()](./node-client.getdevicename.md) | Returns name of the device. |
|  [isValidationError(err)](./node-client.isvalidationerror.md) | Check if the provided error indicates the server failed to validate input parameters to API. |

## Interfaces

|  Interface | Description |
|  --- | --- |
|  [AuthorizeOptions](./node-client.authorizeoptions.md) | Auth UI authorization options |
|  [AuthResponse](./node-client.authresponse.md) |  |
|  [ByteArray](./node-client.bytearray.md) |  |
|  [ChallengeResponse](./node-client.challengeresponse.md) |  |
|  [ConfigureOptions](./node-client.configureoptions.md) |  |
|  [ContainerOptions](./node-client.containeroptions.md) |  |
|  [ContainerStorage](./node-client.containerstorage.md) |  |
|  [CustomTokenIdentity](./node-client.customtokenidentity.md) |  |
|  [ExtraSessionInfoOptions](./node-client.extrasessioninfooptions.md) |  |
|  [Identity](./node-client.identity.md) |  |
|  [IdentityClaims](./node-client.identityclaims.md) |  |
|  [ImageProcessingPipelineBuilderResizeOptions](./node-client.imageprocessingpipelinebuilderresizeoptions.md) |  |
|  [OAuthError](./node-client.oautherror.md) | OAuthError represents the oauth error response. https://tools.ietf.org/html/rfc6749\#section-4.1.2.1 |
|  [OAuthIdentity](./node-client.oauthidentity.md) |  |
|  [OAuthManualAuthorizationURLOptions](./node-client.oauthmanualauthorizationurloptions.md) |  |
|  [OAuthMobileAppAuthorizationURLOptions](./node-client.oauthmobileappauthorizationurloptions.md) |  |
|  [OAuthWebPopupAuthorizationURLOptions](./node-client.oauthwebpopupauthorizationurloptions.md) |  |
|  [OAuthWebRedirectAuthorizationURLOptions](./node-client.oauthwebredirectauthorizationurloptions.md) |  |
|  [PasswordIdentity](./node-client.passwordidentity.md) |  |
|  [PromoteOptions](./node-client.promoteoptions.md) | Auth UI anonymous user promotion options |
|  [Session](./node-client.session.md) |  |
|  [SessionUserAgent](./node-client.sessionuseragent.md) |  |
|  [SSOLoginOptions](./node-client.ssologinoptions.md) |  |
|  [StorageDriver](./node-client.storagedriver.md) |  |
|  [UploadAssetOptions](./node-client.uploadassetoptions.md) |  |
|  [User](./node-client.user.md) |  |
|  [ValidationError](./node-client.validationerror.md) |  |
|  [ValidationErrorCauseBase](./node-client.validationerrorcausebase.md) |  |
|  [ValidationErrorExpectationDetails](./node-client.validationerrorexpectationdetails.md) |  |
|  [ValidationErrorFormatDetails](./node-client.validationerrorformatdetails.md) |  |
|  [ValidationErrorRangeDetails](./node-client.validationerrorrangedetails.md) |  |

## Variables

|  Variable | Description |
|  --- | --- |
|  [CANCEL](./node-client.cancel.md) | CANCEL is sentinel value for cancel. |
|  [defaultContainer](./node-client.defaultcontainer.md) | Default Skygear APIs container. |
|  [SkygearErrorNames](./node-client.skygearerrornames.md) |  |
|  [ValidationErrorKinds](./node-client.validationerrorkinds.md) |  |
|  [VERSION](./node-client.version.md) |  |

## Type Aliases

|  Type Alias | Description |
|  --- | --- |
|  [FullOAuthAuthorizationURLOptions](./node-client.fulloauthauthorizationurloptions.md) |  |
|  [JSONObject](./node-client.jsonobject.md) |  |
|  [JSONValue](./node-client.jsonvalue.md) |  |
|  [OAuthAuthorizationURLOptions](./node-client.oauthauthorizationurloptions.md) |  |
|  [SkygearErrorName](./node-client.skygearerrorname.md) |  |
|  [ValidationErrorCause](./node-client.validationerrorcause.md) |  |
|  [ValidationErrorKind](./node-client.validationerrorkind.md) |  |
|  [ValidationInvalidConstantCause](./node-client.validationinvalidconstantcause.md) |  |
|  [ValidationInvalidEntryAmountCause](./node-client.validationinvalidentryamountcause.md) |  |
|  [ValidationInvalidEnumCause](./node-client.validationinvalidenumcause.md) |  |
|  [ValidationInvalidNumberRangeCause](./node-client.validationinvalidnumberrangecause.md) |  |
|  [ValidationInvalidStringFormatCause](./node-client.validationinvalidstringformatcause.md) |  |
|  [ValidationInvalidStringLengthCause](./node-client.validationinvalidstringlengthcause.md) |  |
|  [ValidationInvalidTypeCause](./node-client.validationinvalidtypecause.md) |  |

